# HESA-Dashboard

./: README.md  practice.py  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
data/: get_lat_lon.py  hei_data.csv  pivot_df.csv
src/: app.py  figures.py  get_lat_lon copy.py  get_lat_lon.py  other.txt
src/pages/: comparison.py  error.py  homepage.py  map_view.py  overview.py  ranking_table.py
tests/: conftest.py  test_app.py  test_comparison.py  test_homepage.py  test_overview.py  test_ranking_table.py  tests.py
