[project]
name = "hei_Environmental_Dashboard"
version = "1.0"
description = "COMP0034 dashboard"

# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]  # list of folders that contain the packages (["."] by default)
namespaces = false  # to disable scanning PEP 420 namespaces (true by default)